
[package]
name = "zksync-crypto"
version = "1.0.0"
edition = "2018"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync"
license = "Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false # This library is not published stand-alone, it is bundled with `zksync.js`.

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="beta"}
rand = "0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }

wasm-bindgen="0.2.86"
hex = "0.4"
sha2 = "0.8"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

num-bigint = "0.4.3"

#executor={path="/Users/lvcong/rust/zkdex/core/lib/executor"}
getrandom = {version="0.2",features=["js"]}
mio = "0.7.12"
num = { version = "0.4.0", features = ["serde"] }

num-traits = "0.2.15"
zksync_crypto={git="https://github.com/matter-labs/zksync.git",package="zksync_crypto"}
#openssl = { version = "0.10.52", features = ["vendored"] }
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

